# Daily-Planner-

./: .gitignore  .replit  DESIGN_CUSTOMIZATION.md  EMAIL_SETUP.md  NOTIFICATION_GUIDE.md  README.md  SETTINGS_IMPLEMENTATION.md  TODO.md  app.py  database.db  database.py  database.sqbpro  email_notifications.py  models.py  pyproject.toml  replit.md  requirements.txt  view_data.py
attached_assets/: Pasted-Perfect-here-s-your-next-level-master-prompt-It-includes-everything-from-before-plus-professio-1761573003666_1761573003670.txt
blueprints/: assistant.py  auth.py  main.py  notes.py  tasks.py
static/css/: custom.css
static/js/: comprehensive-settings.js  main.js  notifications.js  settings.js  simplified-settings.js  timer.js
templates/: base.html  calendar.html  dashboard.html  home.html  login.html  notes.html  register.html  settings.html  settings_new.html  tasks.html  timer.html
