[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.9.1",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "reportlab>=4.4.4",
    "werkzeug>=3.1.3",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]
